--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1082,11 +1082,11 @@ en:
         update: Update
     users:
       edit:
-        edit_membership_html: 'Edit membership <em class="small">for %{email}</em>'
+        edit_membership_html: Edit membership for <em class="small">%{email}</em>
         remove_from_organization: remove from organization
         invited: Invited
         signed_up: Signed up
-        has_not_signed_up_html: '%{name} <strong>has still not signed up</strong>'
+        has_not_signed_up_html: "%{name} <strong>has still not signed up</strong>"
         email: Email
         membership_type: Membership type
         admin_of_organization: Admin of organization
@@ -1096,12 +1096,28 @@ en:
       index:
         manage_users: Manage Users
         you_have_invited_html: 'You have invited: <strong>%{users_count}</strong>'
-        remaining_invites: You can add <strong>%{invitations_count}</strong> more
+        remaining_invites_html: You can add <strong>%{invitations_count}</strong> more
         invite_more_users: Invite more users
-        emails_are_currently_sent_from: Emails are currently sent from <em>%{email}</em>.
+        emails_are_currently_sent_from_html: Emails are currently sent from <em>%{email}</em>.
         update_email: Update email
         created: Created
+        user: user
         to: To
         claimed: Claimed
         is_admin: Admin?
         sender: Sender
+      new:
+        invite_user: Invite user
+        you_have_invited_html: 'You have invited: <strong>%{users_count}</strong>'
+        remaining_invites_html: You can add <strong>%{invitations_count}</strong> more
+        email_youre_inviting: Email you're inviting
+        invite_multiple_emails: Invite multiple emails
+        multiple_emails: Multiple emails
+        1_email_per_line: 1 email per line
+        membership: Membership
+        user: user
+        example_emails: example@example.com\nexample2@example.com\nexample3@example.com
+        membership_type: Membership type
+        admin_of_organization: Admin of organization
+        member_of_organization: Member of organization
+        send_invitation: Send invitation
